# HiveMind

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SITREP.md  alembic.ini  docker-compose.yml  glama.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-agent-connection-loop/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-trust-security-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_deleted_at.py  003_api_keys.py  004_auto_approve_rules.py  005_webhook_endpoints.py  006_quality_temporal.py
dashboard/: .env.local.example  package.json
hivemind/: __init__.py  config.py
hivemind/api/: __init__.py  auth.py  middleware.py  router.py
hivemind/cli/: __init__.py  client.py  review.py
hivemind/conflict/: __init__.py  resolver.py
hivemind/db/: __init__.py  models.py  session.py
hivemind/dedup/: __init__.py  cosine_stage.py  llm_stage.py  minhash_stage.py  pipeline.py
hivemind/graph/: __init__.py  driver.py
hivemind/pipeline/: __init__.py  embedder.py  injection.py  integrity.py  pii.py
hivemind/quality/: __init__.py  aggregator.py  distillation.py  scorer.py  signals.py
hivemind/security/: __init__.py  api_key.py  rate_limit.py  rbac.py
hivemind/server/: __init__.py  auth.py  main.py
hivemind/temporal/: queries.py
hivemind/webhooks/: __init__.py  tasks.py
npx/: README.md  package.json
scripts/: demo.tape  export_openapi.py
sdks/python/: README.md  pyproject.toml
sdks/typescript/: README.md  package.json
skills/: SKILL.md
wrappers/crewai/: README.md  pyproject.toml
wrappers/crewai/hivemind_crewai/: __init__.py  tool.py
wrappers/langchain/: README.md  pyproject.toml
wrappers/langchain/hivemind_langchain/: __init__.py  retriever.py
(+90 files in other folders)
