[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind-crewai"
version = "0.1.0"
description = "CrewAI tool for searching the HiveMind shared knowledge commons"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.100.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/AmirK-S/HiveMind"
