[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind-langchain"
version = "0.1.0"
description = "LangChain retriever for HiveMind shared knowledge commons"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/AmirK-S/HiveMind"
